--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "watch": "motion"
   },
   "dependencies": {
-    "detect-browser": "1.3.3",
+    "detect-browser": "^1.3.3",
     "disposable-event": "^1.0.0",
     "motion": "1.4.1",
-    "motion-style": "2.0.0",
-    "react": "15.1.0",
-    "react-dom": "15.1.0",
+    "motion-style": "^2.0.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-router": "^2.5.2",
     "sb-event-kit": "^2.0.0"
   }
